LC-833 initializes patternlab and applies color changes

--- a/public/patterns/00-atoms-01-global/index.html
+++ b/public/patterns/00-atoms-01-global/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="stylesheet" href="../../css/style.css?1433446340" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1433451452" media="all" />
 
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 				<!-- never cache patterns -->
@@ -15,8 +15,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1433446340" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1433446340" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1433451452" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1433451452" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -32,86 +32,188 @@
 					<div id="atoms-colors" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/00-atoms-01-global-00-colors/00-atoms-01-global-00-colors.html" class="patternLink" data-patternpartial="atoms-colors">Colors</a></h2>
 						<div class="sg-pattern-body">
-							<ul class="sg-colors">
+							<h2>Vibrant Colors</h2>
+<ul class="sg-colors">
 	<li>
-		<span class="sg-swatch" style="background: #000000;"></span>
-		<span class="sg-label">#ffffff</span>
+		<span class="sg-label">Orange</span>
+		<span class="sg-swatch" style="background: #CC4E10;"></span>
+		<span class="sg-label">#CC4E10</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #00ff00;"></span>
-		<span class="sg-label">#00ff00</span>
+		<span class="sg-label">ClassicBlue</span>
+		<span class="sg-swatch" style="background: #014982;"></span>
+		<span class="sg-label">#014982</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #0000ff;"></span>
-		<span class="sg-label">#0000ff</span>
+		<span class="sg-label">LightBlue</span>
+		<span class="sg-swatch" style="background: #63C9F7;"></span>
+		<span class="sg-label">#63C9F7</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #ffff00;"></span>
-		<span class="sg-label">#ffff00</span>
+		<span class="sg-label">RichRed</span>
+		<span class="sg-swatch" style="background: #CC2A14;"></span>
+		<span class="sg-label">#CC2A14</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #00ffff;"></span>
-		<span class="sg-label">#00ffff</span>
+		<span class="sg-label">LightGreen</span>
+		<span class="sg-swatch" style="background: #92CC4E;"></span>
+		<span class="sg-label">#92CC4E</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #ff00ff;"></span>
-		<span class="sg-label">#ff00ff</span>
-	</li>
-	<li>
-		<span class="sg-swatch" style="background: #ffffff;"></span>
-		<span class="sg-label">#ffffff</span>
-	</li>
-	<li>
-		<span class="sg-swatch" style="background: #808080;"></span>
-		<span class="sg-label">#808080</span>
-	</li>
-	<li>
-		<span class="sg-swatch" style="background: #000000;"></span>
-		<span class="sg-label">#000000</span>
+		<span class="sg-label">Yellow</span>
+		<span class="sg-swatch" style="background: #FFEB3B;"></span>
+		<span class="sg-label">#FFEB3B</span>
 	</li>
 </ul>
+<h2>Business Colors</h2>
+<ul class="sg-colors">
+	<li>
+		<span class="sg-label">Orange</span>
+		<span class="sg-swatch" style="background: #CC4E10;"></span>
+		<span class="sg-label">#CC4E10</span>
+	</li>
+	<li>
+		<span class="sg-label">ClassicBlue</span>
+		<span class="sg-swatch" style="background: #014982;"></span>
+		<span class="sg-label">#014982</span>
+	</li>
+	<li>
+		<span class="sg-label">Teal</span>
+		<span class="sg-swatch" style="background: #00758C;"></span>
+		<span class="sg-label">#00758C</span>
+	</li>
+	<li>
+		<span class="sg-label">Burgundy</span>
+		<span class="sg-swatch" style="background: #800D20;"></span>
+		<span class="sg-label">#800D20</span>
+	</li>
+	<li>
+		<span class="sg-label">RichGreen</span>
+		<span class="sg-swatch" style="background: #326E1E;"></span>
+		<span class="sg-label">#326E1E</span>
+	</li>
+	<li>
+		<span class="sg-label">ClassicGold</span>
+		<span class="sg-swatch" style="background: #F9B000;"></span>
+		<span class="sg-label">#F9B000</span>
+	</li>
+</ul>
+<h2>Shades</h2>
+<ul class="sg-colors">
+	<li>
+		<span class="sg-label">Black(87%)</span>
+		<span class="sg-swatch" style="background: #212121;"></span>
+		<span class="sg-label">#212121</span>
+	</li>
+	<li>
+		<span class="sg-label">DarkGrey(72%)</span>
+		<span class="sg-swatch" style="background: #474747;"></span>
+		<span class="sg-label">#474747</span>
+	</li>
+	<li>
+		<span class="sg-label">LightGrey(12%)</span>
+		<span class="sg-swatch" style="background: #E0E0E0;"></span>
+		<span class="sg-label">#E0E0E0</span>
+	</li>
+	<li>
+		<span class="sg-label">White</span>
+		<span class="sg-swatch" style="background: #FFFFFF;"></span>
+		<span class="sg-label">#FFFFFF</span>
+	</li>
+ </ul>
 							<div class="sg-code" style="display: none">
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
-										&lt;ul class=&quot;sg-colors&quot;&gt;
+										&lt;h2&gt;Vibrant Colors&lt;/h2&gt;
+&lt;ul class=&quot;sg-colors&quot;&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #000000;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#ffffff&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;Orange&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #CC4E10;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#CC4E10&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #00ff00;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#00ff00&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;ClassicBlue&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #014982;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#014982&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #0000ff;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#0000ff&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;LightBlue&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #63C9F7;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#63C9F7&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #ffff00;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#ffff00&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;RichRed&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #CC2A14;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#CC2A14&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #00ffff;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#00ffff&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;LightGreen&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #92CC4E;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#92CC4E&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #ff00ff;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#ff00ff&lt;/span&gt;
-	&lt;/li&gt;
-	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #ffffff;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#ffffff&lt;/span&gt;
-	&lt;/li&gt;
-	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #808080;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#808080&lt;/span&gt;
-	&lt;/li&gt;
-	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #000000;&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#000000&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;Yellow&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #FFEB3B;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#FFEB3B&lt;/span&gt;
 	&lt;/li&gt;
 &lt;/ul&gt;
+&lt;h2&gt;Business Colors&lt;/h2&gt;
+&lt;ul class=&quot;sg-colors&quot;&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;Orange&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #CC4E10;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#CC4E10&lt;/span&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;ClassicBlue&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #014982;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#014982&lt;/span&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;Teal&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #00758C;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#00758C&lt;/span&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;Burgundy&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #800D20;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#800D20&lt;/span&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;RichGreen&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #326E1E;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#326E1E&lt;/span&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;ClassicGold&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #F9B000;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#F9B000&lt;/span&gt;
+	&lt;/li&gt;
+&lt;/ul&gt;
+&lt;h2&gt;Shades&lt;/h2&gt;
+&lt;ul class=&quot;sg-colors&quot;&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;Black(87%)&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #212121;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#212121&lt;/span&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;DarkGrey(72%)&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #474747;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#474747&lt;/span&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;LightGrey(12%)&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #E0E0E0;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#E0E0E0&lt;/span&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;White&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch&quot; style=&quot;background: #FFFFFF;&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#FFFFFF&lt;/span&gt;
+	&lt;/li&gt;
+ &lt;/ul&gt;
 									</code>
 								</pre>
 							</div>
@@ -238,10 +340,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1433446340">
+	<script id="pl-js-polyfill-insert-1433451452">
 		(function() {
 			if (self != top) {
-				var cb = '1433446340';
+				var cb = '1433451452';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -250,10 +352,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1433446340">
+	<script id="pl-js-insert-1433451452">
 		(function() {
 			if (self != top) {
-				var cb = '1433446340';
+				var cb = '1433451452';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
